--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Tasks#index</h1>
+<% @tasks.each do |task| %>
+   <li><%= link_to task.name, task_path(task) %></li>
+<% end %>
 <p>Find me in app/views/tasks/index.html.erb</p>
+
